fix appBody on small devices

--- a/src/sass/theme/reset.scss
+++ b/src/sass/theme/reset.scss
@@ -332,6 +332,7 @@ $appHeaderHeight: 80px;
         }
 
         .appBody {
+            width: 100%;
             height: 100%;
             overflow-y: auto;
             overflow-x: hidden;
